# CodeGraphX

./: .codegraphx.db  .codegraphxrc  .gitignore  .npmignore  BENCHMARK.md  CLAUDE.md  CODEGRAPHX_AGENT_USAGE.md  CODEGRAPHX_MANUAL_DEMO.md  CodeGraphX_Capability_Report.md  CodeGraphX_Research_and_Build_Plan.md  CodeGraphX_TicTacToe_Test_Report.md  GEMINI.md  LICENSE  README.md  TASK_LIST.md  TODO.md  as.md  benchmark-results.json  dump_prompt.md  improvement_suggestion_for_mcp.md  jest.config.js  log.md  mcp-setup.md  package-lock.json  package.json  pyproject.toml  tested-gemini-session-in-cocheck.json
TruIntellegence documents/: Corss-Language linking specification.md  Master Overview Plan.md  Module Contracts.md  Phase 6 and 8 Implementation Plan.md  Phase 7 - Outcome-Oriented MCP Refinements.md  Phased Development.md  Scaling Strategy.md  Semantic Indexing Roadmap.md  Storage Strategy.md  System Architecture Document.md  Task verification.md  Testing Strategy.md
codegraphx/: main.py  package.json
codegraphx/src/: cli.js  (+8 more)
scripts/: benchmark.js
src/: cli.js  context-builder.js  cross-language-linker.js  dashboard.js  doctor.js  edgebuilder.js  entities.js  interrogator.js  parser.js  registry.js  resolver.js  scanner.js  store.js  symbols_imports_py.js  utils.js  verifier.js  watch.js
tests/: bloom.test.js  context-builder.test.js  cross-language-linker.test.js  dashboard.test.js  differ.test.js  edgebuilder.test.js  entities.test.js  interrogator.test.js  jest.setup.js  parser.test.js  registry.test.js  resolver.test.js  verifier.test.js  verify-mcp.js
(+76 files in other folders)
